@@ -2356,15 +2356,15 @@ const static double Pa[ns_c][3][11]=
       {
        +1000.0e0,        /* Tmin [K] */ 
        +6000.0e0,        /* Tmax [K] */
-       -1.289136472e+05, /* a1 */
-       +1.719528572e+02, /* a2 */
-       +2.646044387e+00, /* a3 */
-       -3.353068950e-04, /* a4 */
-       +1.742092740e-07, /* a5 */
-       -2.902817829e-11, /* a6 */
-       +1.642182385e-15, /* a7 */
-       +8.410597850e+04, /* b1 */
-       +4.130047418e+00  /* b2 */
+        1.255112551e+04,
+       -3.411874670e+01,
+        2.543383218e+00,
+       -2.805120849e-05,
+        9.751641970e-09,
+       -1.736855394e-12,
+        1.246191931e-16,
+        2.171001786e+05,
+        4.063913515e+00
       },
       {
        +6000.0e0,        /* Tmin [K] */ 
@@ -2664,8 +2664,8 @@ const static double Pa[ns_c][3][11]=
         0.000000000E+00,
         0.000000000E+00,
         0.000000000E+00,
-        1.597615494E+04,
-        -1.139013868E+00
+        1.840214877E+05,
+        -1.140646644E+00
       }
     },
 
